# TrustNaija

./: ADMIN_ROLE_ISSUE.md  API_DOCUMENTATION.md  API_VERIFICATION_REPORT.md  FRONTEND_RESPONSE_ANALYSIS.md
backend/: .env  Cargo.toml  Dockerfile  READme.md  docker-compose.yml
backend/migrations/: 20260301135733_initial_schema.sql  20260309_add_risk_contribution_to_reports.sql  20260311_expand_identifier_types.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: audit.rs  identifiers.rs  mod.rs  reports.rs  sms.rs  user.rs  ussd.rs
backend/src/routes/: admin.rs  auth.rs  health.rs  lookup.rs  meta.rs  meta_audit.rs  ml.rs  mod.rs  report.rs  sms.rs  ussd.rs  whatsapp.rs
backend/src/services/: audit_services.rs  auth_service.rs  lookup_service.rs  meta_service.rs  ml_engine.rs  mod.rs  report_service.rs  risk_engine.rs  sms_service.rs  ussd_service.rs
backend/src/utils/: hash.rs  identifier.rs  jwt.rs  mod.rs  normalize.rs  otp.rs
frontend/: QUICK_REFERENCE.md  README.md  RESTRUCTURING_COMPLETE.md  STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  TrustNaija.jsx  format.ts  index.css
frontend/src/components/: MLDashboard.tsx  SocialShareButtons.tsx  SocialShareWidget.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: index.ts  useLookup.ts
frontend/src/lib/: api.ts  index.ts  meta.ts  utils.ts
frontend/src/pages/: AdminPage.tsx  EvidencePage.tsx  HomePage.tsx  LoginPage.tsx  LookupPage.tsx  PrivacyPolicy.tsx  (+5 more)
(+17 files in other folders)
